--- a/web/layout/index.less
+++ b/web/layout/index.less
@@ -1,4 +1,4 @@
-.normal {
+/*.normal {
     font-family: Georgia, sans-serif;
     text-align: center;
 }
@@ -19,4 +19,4 @@ body {
     font-size: 15px;
     bottom: 10px;
     right: 100px;
-}
+}*/
